# stylor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: stylor.hpp
include/stylor/: image.hpp  loss.hpp  optimizer.hpp  preprocessing.hpp  safetensors_io.hpp  tensor.hpp  training_context.hpp  transform_network.hpp  version.hpp  vgg.hpp  weight_loader.hpp
scripts/: .gitignore  export_vgg19.py  pyproject.toml
src/: CMakeLists.txt  image.cpp  loss.cpp  main.cpp  optimizer.cpp  safetensors_io.cpp  tensor.cpp  training_context.cpp  transform_network.cpp
src/commands/: infer.cpp  infer.hpp  train.cpp  train.hpp
src/vgg/: preprocessing.cpp  vgg.cpp  weight_loader.cpp
tests/: CMakeLists.txt  test_image.cpp  test_loss.cpp  test_main.cpp  test_preprocessing.cpp  test_tensor.cpp  test_transform_network.cpp  test_vgg.cpp  test_weight_loader.cpp
